# parallel-computing-cpp

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  doxygen.conf  get-info.sh  meson.build  meson_options.txt  run-benchmarks.sh  run-debug.sh  run-master.sh  run-tests.sh  tests.core
.github/workflows/: cmake-single-platform.yml
benchmarks/: array_operations_benchmark.cpp  bandwidth_benchmark.cpp  benchmarks.cpp  pc_benchmark.cpp  pragma_benchmark.cpp  transpose_benchmark.cpp
benchmarks/plotting/: .gitignore  README.md  convert_oneliner  report.txt
benchmarks/plotting/data/: cluster_data.py  data.py
benchmarks/plotting/notebooks/: amalgamated.ipynb  bandwidth.ipynb  checkSymm.ipynb  matTranspose.ipynb  simple_plot.ipynb  transpose.ipynb
benchmarks/plotting/notebooks-first-deliverable/: amalgamated.ipynb  matTranspose.ipynb
benchmarks/plotting/notebooks-second-deliverable/: checkSymm.ipynb  chrono.ipynb  matTranspose.ipynb  weak_scaling.ipynb
benchmarks/plotting/reports/: base.txt  opt.txt  opt_aggressive.txt  opt_o1.txt  opt_o2.txt  opt_o3.txt
cluster/: README.md  scp-cluster.sh
cluster/firsr-project/: .hello.pbs.~undo-tree~  firt-project.pbs  hello.pbs
cluster/first-assignment/: first-assignment.pbs  firt-assignment.pbs
cluster/hello/: hello.pbs
cluster/second-assignment/: mpi-chrono.pbs  second-assignment.pbs  test.pbs
docs/: docs.doxygen
fuzz/: pc_fuzz.cpp  transpose_fuzz.cpp
include/pc/: BUILD  bandwidth.hpp  benchmarks.hpp  check_symm.hpp  ilp.hpp  mpi.hpp  mpi4.hpp  mpi5.hpp  pc.hpp  pragma.hpp  transpose.hpp
latex/: build.sh  paper.out  paper.tex  paper2.tex  paper_old.tex  template.tex
src/: BUILD  bandwidth.cpp  check_symm.cpp  ilp.cpp  master.cpp  pc.cpp  pragma.cpp  transpose.cpp  workers.cpp
subprojects/: .gitignore  tenno.wrap  valfuzz.wrap
tests/: bandwidth_test.cpp  check_symm_test.cpp  flake.nix  pc_test.cpp  transpose_test.cpp
tests/mpi/: README.md  a.out  bcast.cpp  broadcast_bcast.cpp  broadcast_manual.cpp  hello.cpp  matTransposeInvert2.cpp  min.cpp  reduce.cpp  round-robin.cpp  sum.cpp
